--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>半夜集 - {{ m.title }}</title>
+    <title>半夜集</title>
     <!-- css file -->
     <link rel="stylesheet" href="../../static/article/css/detail.css">
 </head>
@@ -10,28 +10,14 @@
 <nav id="id-nav-head">
 
 </nav>
-<div id="id-article-container">
-    <h2 id="id-article-title">
-        {{ m.title }}
-    </h2>
-    <span id="id-article-ct">
-        {{ m.ct }}
-    </span>
-    <span>
-        {{ m.tags }}
-    </span>
-    <span id="id-article-ut">
-        {{ m.ut }}
-    </span>
-    <div>
-        {{ m.overview }}
-    </div>
-    <div id="id-article-content">
-        {{ m.html() }}
-    </div>
+<div id="id-article-container" data-id="{{ id }}">
 </div>
 <!-- js file -->
+<script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<script src="//cdn.bootcss.com/nunjucks/3.0.0/nunjucks.js"></script>
 <script src="../../static/js/iv.js"></script>
+<script src="../../static/js/iv-md.js"></script>
+<script src="../../static/article/js/detail.js"></script>
 </body>
 </html>
