--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -12,6 +12,14 @@
 </nav>
 <div id="id-article-container" data-id="{{ id }}">
 </div>
+<div id="id-comment-container">
+    <div id="id-comment-content">
+    </div>
+    <div>
+        <input id="id-input-content" data-id="{{ id }}" type="text" name="content">
+        <button id="id-btn-add" type="submit">add comment</button>
+    </div>
+</div>
 <!-- js file -->
 <script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
