--- a/templates/article/new.html
+++ b/templates/article/new.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="id-input-tags" class="col-md-2 control-label">标签</label>
+            <label for="id-input-category" class="col-md-2 control-label">标签</label>
             <div class="col-md-10">
-                <input id="id-input-tags" type="text" class="form-control">
+                <input id="id-input-category" type="text" class="form-control">
             </div>
         </div>
     </form>
@@ -47,11 +47,10 @@
     </div>
 </div>
 <!-- js 文件 -->
-<script src="//cdn.bootcss.com/marked/0.3.6/marked.js"></script>
+<script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
 <script src="../../static/js/iv.js"></script>
 <script src="../../static/js/iv-md.js"></script>
 <script src="../../static/article/js/new.js"></script>
 </body>
-
 </html>
