--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     color: #555;
 }
 
