--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -7,6 +7,7 @@
 {% block sytle %}
     {{ super() }}
     <link rel="stylesheet" href="../../static/article/css/detail.css">
+    <link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/atom-one-dark.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
@@ -28,8 +29,8 @@
 {% block script %}
     {{ super() }}
     <!-- js file -->
-    <script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
     <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
     <script src="//cdn.bootcss.com/nunjucks/3.0.0/nunjucks.js"></script>
     <script src="../../static/js/iv-md.js"></script>
     <script src="../../static/article/js/detail.js"></script>
