--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -21,7 +21,7 @@
 {% block script %}
     {{ super() }}
     <!-- js file -->
-    <script src="//cdn.bootcss.com/nunjucks/3.0.0/nunjucks.js"></script>
-    <script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.js"></script>
+    <script src="https://cdn.bootcss.com/nunjucks/3.0.0/nunjucks.js"></script>
+    <script src="https://cdn.bootcss.com/remarkable/1.7.1/remarkable.js"></script>
     <script src="../../static/article/js/articles.js"></script>
 {% endblock %}
