--- a/templates/article/new.html
+++ b/templates/article/new.html
@@ -7,7 +7,7 @@
 {% block sytle %}
     {{ super() }}
     <link rel="stylesheet" href="../../static/article/css/editor.css">
-    <link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/atom-one-dark.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/atom-one-dark.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
@@ -45,8 +45,8 @@
 {% block script %}
     {{ super() }}
     <!-- js file -->
-    <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
-    <script src="//cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="https://cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
     <script src="../../static/js/iv-md.js"></script>
     <script src="../../static/article/js/new.js"></script>
 {% endblock %}
