--- a/static/article/css/articles.css
+++ b/static/article/css/articles.css
@@ -6,4 +6,36 @@
 
 .article-cell {
     width: 100%;
+    margin: 40px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
+.article-title {
+    margin: 20px 0 0 0;
+}
+
+.article-link {
+    font-size: 1.4rem;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a {
+    color: #555;
+    text-decoration: none;
+}
+
+.article-info {
+    font-size: 0.8rem;
+    color: rgba(0, 0, 0, 0.5);
+    margin: 10px 0 10px 0;
+}
+
+.article-overview {
+    margin: 5px 0 15px 0;
+}
+
