--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>半夜集 - {% block title %}{% endblock %}</title>
     {% block sytle %}
+        <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../static/css/base.css">
     {% endblock %}
 </head>
 <body>
 <nav>
-    <a href="/">主页</a>
-    <a href="/articles/category/python">Python</a>
-    <a href="/articles/category/javascript">JavaScript</a>
-    <a href="/articles/catagory/mind">杂谈</a>
-    <a href="/other">其他</a>
+    <a href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>主页</a>
+    <a href="/articles"><i class="fa fa-book fa-fw" aria-hidden="true"></i>所有文章</a>
+    <a href="/articles/categories/python"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Python</a>
+    <a href="/articles/categories/javascript"><i class="fa fa-magic fa-fw" aria-hidden="true"></i>JavaScript</a>
+    <a href="/articles/catagories/mind"><i class="fa fa-tint fa-fw" aria-hidden="true"></i>杂谈</a>
+    <a href="/other"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>其他</a>
 </nav>
 {% block body %}
 
