--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,9 +5,8 @@ body {
 }
 
 nav {
-    display: flex;
     width: 100%;
-    height: 50px;
+    height: 90px;
     background-color: #F2F2F2;
 }
 
@@ -22,4 +21,8 @@ nav a:hover {
 
 nav a {
     color: #888;
+}
+
+.flex-box {
+    display: flex;
 }
