--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,11 @@
 <body>
 <nav class="flex-box">
     <a href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>主页</a>
-    <a href="/articles"><i class="fa fa-book fa-fw" aria-hidden="true"></i>所有文章</a>
-    <a href="/categories/python"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Python</a>
-    <a href="/categories/javascript"><i class="fa fa-magic fa-fw" aria-hidden="true"></i>JavaScript</a>
-    <a href="/catagories/mind"><i class="fa fa-tint fa-fw" aria-hidden="true"></i>杂谈</a>
-    <a href="interests/about"><i class="fa fa-user fa-fw" aria-hidden="true"></i>关于</a>
+    <a href="#all"><i class="fa fa-book fa-fw" aria-hidden="true"></i>所有文章</a>
+    <a href="#python"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Python</a>
+    <a href="#javascript"><i class="fa fa-magic fa-fw" aria-hidden="true"></i>JavaScript</a>
+    <a href="#mind"><i class="fa fa-tint fa-fw" aria-hidden="true"></i>杂谈</a>
+    <a href="/categories/about"><i class="fa fa-user fa-fw" aria-hidden="true"></i>关于</a>
 </nav>
 {% block body %}
 
