--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -7,21 +7,26 @@
 {% block sytle %}
     {{ super() }}
     <link rel="stylesheet" href="../../static/article/css/articles.css">
+    <link rel="stylesheet" href="../../static/article/css/detail.css">
 {% endblock %}
 
 {% block body %}
-    <div id="id-articles-container"
-         data-source="/api/articles"
-         data-template="templateCellArticle"
-         data-template-key="t">
-
+    <div id="id-spa">
+        <div id="id-articles-container"
+             data-source="/api/articles"
+             data-template="templateCellArticle"
+             data-template-key="t">
+        </div>
     </div>
 {% endblock %}
 
 {% block script %}
     {{ super() }}
     <!-- js file -->
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="https://cdn.bootcss.com/remarkable/1.7.1/remarkable.min.js"></script>
     <script src="https://cdn.bootcss.com/nunjucks/3.0.0/nunjucks.js"></script>
-    <script src="https://cdn.bootcss.com/remarkable/1.7.1/remarkable.js"></script>
+    <script src="../../static/js/iv-md.js"></script>
+    <script src="../../static/article/js/spa-detail.js"></script>
     <script src="../../static/article/js/articles.js"></script>
 {% endblock %}
