--- a/static/article/css/detail.css
+++ b/static/article/css/detail.css
@@ -1,6 +1,6 @@
 #id-article-container {
     width: 800px;
-    margin: 80px auto;
+    margin: 65px auto;
 }
 
 #id-article-title {
@@ -47,7 +47,7 @@ a {
 }
 
 .article-overview {
-    padding: 40px 0 20px 0;
+    padding: 30px 0 10px 0;
 }
 
 #id-article-content::before {
@@ -55,4 +55,10 @@ a {
     display: block;
     border-top: 1px dashed #777;
     box-sizing: border-box;
+}
+
+.detail-info {
+    font-size: 0.9rem;
+    color: rgba(0, 0, 0, 0.5);
+    margin: 30px 0 0 0;
 }
