--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    <div id="id-article-container" data-id="{{ id }}">
+    <div id="id-article-container" data-id="{{ id }}" class="fadeIn slideDown">
         <article>
 
         </article>
