--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     {% endblock %}
 </head>
 <body>
-<nav class="flex-box">
+<nav class="flex-box fadeIn">
     <a href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>主页</a>
     <a href="#category/all"><i class="fa fa-book fa-fw" aria-hidden="true"></i>所有文章</a>
     <a href="#category/python"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Python</a>
