添加部署配置

--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -8,6 +8,7 @@
     {{ super() }}
     <link rel="stylesheet" href="../../static/article/css/articles.css">
     <link rel="stylesheet" href="../../static/article/css/detail.css">
+        <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/github.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
