--- a/static/css/base.css
+++ b/static/css/base.css
@@ -170,3 +170,7 @@ nav a {
 body {
     font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
+
+code {
+    font-family: "Input Mono", "Menlo Regular", Monaco, consolas, monospace;
+}
