修复注册登录逻辑，更改密钥，统一前端表单发送逻辑

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,10 @@ nav a {
     display: flex;
 }
 
+.space-around {
+    justify-content: space-around;
+}
+
 /* 内容淡入*/
 .fadeIn {
     animation: 2s fadein ease forwards;
