--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -10,23 +10,33 @@
 
 {% block body %}
     <div id="id-action-container">
-    <div class="user-container">
-        <label for="id-register-username">用户名</label>
-        <input id="id-register-username" class="input-info" type="text" name="username">
-        <label for="id-register-email">邮箱</label>
-        <input class="input-info" type="email" name="email">
-        <label for="id-register-password">密码</label>
-        <input id="id-register-password" class="input-info" type="password" name="password">
-        <button class="user-action" type="submit" data-action="register">register</button>
+        <div class="user-container">
+            <label for="id-register-username">
+                用户名
+                <input id="id-register-username" class="input-info" type="text" name="username">
+            </label>
+            <label for="id-register-email">
+                邮箱
+                <input class="input-info" type="email" name="email">
+            </label>
+            <label for="id-register-password">
+                密码
+                <input id="id-register-password" class="input-info" type="password" name="password">
+            </label>
+            <button class="user-action" type="submit" data-action="register">register</button>
+        </div>
+        <div class="user-container">
+            <label id="id-register-email" for="id-login-username">
+                用户名
+                <input class="input-info" type="text" name="username">
+            </label>
+            <label for="id-login-username">
+                密码
+                <input class="input-info" type="password" name="password">
+            </label>
+            <button class="user-action" type="submit" data-action="login">login</button>
+        </div>
     </div>
-    <div class="user-container">
-        <label id="id-register-email" for="id-login-username">用户名</label>
-        <input class="input-info" type="text" name="username">
-        <label for="id-login-username">用户名</label>
-        <input class="input-info" type="password" name="password">
-        <button class="user-action" type="submit" data-action="login">login</button>
-    </div>
-</div>
 {% endblock %}
 {% block script %}
     {{ super() }}
