--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <title>半夜集 {% block title %}{% endblock %}</title>
     {% block sytle %}
         <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="../static/css/base.css">
+        <link href="https://cdn.bootcss.com/alertifyjs-alertify.js/1.0.11/css/alertify.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/base.css">
     {% endblock %}
 </head>
 <body>
@@ -22,7 +23,8 @@
 {% endblock %}
 
 {% block script %}
-    <script src="../static/js/iv.js"></script>
+    <script src="https://cdn.bootcss.com/alertifyjs-alertify.js/1.0.11/js/alertify.js"></script>
+    <script src="/static/js/iv.js"></script>
 {% endblock %}
 </body>
 </html>
