--- a/static/article/css/articles.css
+++ b/static/article/css/articles.css
@@ -51,3 +51,68 @@ a {
 .article-detail {
     border-bottom: 1px solid #aaa;
 }
+
+/* editor 样式 */
+
+.source {
+    font-size: 13px;
+    padding: 2px;
+    margin: 2px;
+    box-sizing: border-box;
+}
+
+.full-height {
+    height: 100%;
+}
+
+.result-html {
+    padding: 2px 10px;
+    overflow: auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.result-html img {
+    max-width: 35%;
+}
+
+.flex-box {
+    display: flex;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.flex-grow-2 {
+    flex-grow: 2;
+}
+
+#id-editor-container {
+    width: 800px;
+    margin: 0 auto;
+    height: 800px;
+}
+
+input, textarea {
+    margin: 6px;
+}
+
+.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.half-width {
+    width: 50%;
+}
+
+#id-btn-submit {
+    color: gray;
+    width: 50%;
+    height: 30px;
+    margin: 4px;
+    transform: translateX(50%);
+}
