bugfix 权限验证 删除 about 页面

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <a href="#category/python"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Python</a>
         <a href="#category/javascript"><i class="fa fa-magic fa-fw" aria-hidden="true"></i>JavaScript</a>
         <a href="#category/mind"><i class="fa fa-tint fa-fw" aria-hidden="true"></i>杂谈</a>
-        <a href="/categories/about"><i class="fa fa-user fa-fw" aria-hidden="true"></i>关于</a>
+        <a href="#detail/1"><i class="fa fa-user fa-fw" aria-hidden="true"></i>关于</a>
     </nav>
 {% endblock %}
 
