--- a/templates/article/manage.html
+++ b/templates/article/manage.html
@@ -16,7 +16,7 @@
         <a href="#category/javascript"><i class="fa fa-magic fa-fw" aria-hidden="true"></i>JavaScript</a>
         <a href="#category/mind"><i class="fa fa-tint fa-fw" aria-hidden="true"></i>杂谈</a>
         <a href="#detail/1"><i class="fa fa-user fa-fw" aria-hidden="true"></i>关于</a>
-        <a href="/articles/manage/new"><i class="fa fa-file-o fa-fw" aria-hidden="true"></i>新增</a>
+        <a href="#add"><i class="fa fa-file-o fa-fw" aria-hidden="true"></i>新增</a>
     </nav>
 {% endblock %}
 
